# backpropagate

./: .commit-msg-tmp  .dockerignore  .gitignore  .npmignore  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PRODUCTION_READINESS_AUDIT.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SHIP_GATE.md  WAVE_5_FEATURE_AUDIT_NOTES.md  WAVE_6A_TODO.md  _config.yml  compose.yaml  llms.txt  package.json  pyproject.toml  test_multi_run.py  test_phase1.py  test_phase1_config.py  test_phase2_config.py  test_phase3_config.py  test_phase4_config.py  test_phase5_checkpoints.py  (+5 more)
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  doc-drift.yml  mutmut.yml  nightly-train-smoke.yml  pages-deploy.yml  post-publish-smoke.yml  publish.yml  release-binaries.yml  release.yml  scorecard.yml  security.yml
backpropagate/: .gitignore  __init__.py  checkpoints.py  cli.py  config.py  contracts.py  dataset_report.py  datasets.py  engine.py  eval.py  exceptions.py  export.py  feature_flags.py  feedback.py  gpu_safety.py  logging_config.py  memory.py  mlx_backend.py  model_card.py  multi_run.py  rxconfig.py  security.py  slao.py  theme.py  theme_gradio_legacy.py  trace.py  trainer.py  ui.py  ui_gradio_legacy.py  ui_security.py  ui_state.py  ui_theme.py
backpropagate/ui_app/: __init__.py  app.py  auth.py  chrome.py
backpropagate/ui_app/components/: __init__.py  auth_badge.py  error_callout.py  event_log.py  gpu_ring.py  group.py  loss_chart.py  recovery_banner.py  sparkline.py  status_pill.py  vram_bar.py
backpropagate/ui_app/middleware/: __init__.py  healthz.py  rate_limit.py  request_logging.py  security_headers.py
backpropagate/ui_app/pages/: __init__.py  dataset.py  export.py  models.py  multi_run.py  run_detail.py  runs.py  train.py
docs/: EVENT_HANDLER_TEST_ROADMAP.md  V1_5_BRIEF.md  ci-gates-triage-plan.md  index.md
examples/: quickstart.jsonl
scripts/: README.md  check_doc_drift.py  convert_validated_pairs.py  doc-drift-allow.toml  nightly_train_smoke.py  preflight.sh  prep_release.sh  repin_test_count.sh  run_mutmut.sh  train_perfect_pairs.py
site/: astro.config.mjs  package-lock.json  package.json
site/src/: site-config.ts
site/src/content/docs/handbook/: beginners.md  cli-reference.md  env-vars.md  error-codes.md  estimate-vram.md  export.md  full-fine-tuning.md  getting-started.md  index.md  migrations.md  preference-tuning.md  recipes.md  reference.md  security.md  training.md  troubleshooting-cuda.md  troubleshooting.md
site/src/pages/: 404.astro
tests/: COVERAGE_ROADMAP.md  EVENT_HANDLER_ROADMAP.md  README.md  conftest.py  test_auth_badge.py  test_auth_middleware.py  test_auth_middleware_fuzz.py  test_callback_integration.py  test_check_doc_drift.py  test_checkpoints.py  test_cli.py  test_cli_banner.py  test_cli_data_eval.py  test_cli_extended.py  test_config.py  test_config_extended.py  test_config_legacy_aliases.py  test_contracts.py  test_crash_robustness.py  test_dataset_report.py  test_datasets.py  test_datasets_extended.py  test_doc_drift.py  test_e2e_chain.py  test_envelope_v17.py  test_error_codes_catalog.py  test_eval.py  test_eval_gate_roundtrip.py  test_eval_metrics.py  test_event_handlers.py  test_exceptions.py  test_export.py  test_failure_handling.py  test_feature_flags.py  test_feedback_scoring.py  test_fp8.py  test_fp8_smoke.py  test_fuzz_checkpoints.py  test_gpu_safety.py  test_helpers.py  (+40 more)
tests/helpers/: __init__.py  asgi.py  callbacks.py  ws.py
