[build-system]
# hatchling>=1.27 required for PEP 639 license-expression form ('license = "MIT"' as SPDX expression).
# Older hatchling silently downgrades to Metadata-Version 2.1 and emits empty License-Expression, which
# PyPI then renders as 'License: None' (root cause of v1.3.0 PyPI page showing Author/License = None).
# Verify post-build: `python -m build && twine check dist/* && tar -xOf dist/backpropagate-*.tar.gz '*/PKG-INFO' | grep -E 'License|Author'`
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "backpropagate"
version = "1.4.0"
description = "Production-ready headless LLM fine-tuning with smart defaults, Windows support, and modular architecture"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" }
]
keywords = [
    "llm",
    "fine-tuning",
    "lora",
    "qlora",
    "unsloth",
    "training",
    "machine-learning",
    "headless",
    "api",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

# Core dependencies - minimal for basic functionality
#
# Upper caps on torch + transformers (CIDOCS-B-103): pin BELOW the next major
# so an unscheduled resolve onto it can't silently break installs — the cap
# moves deliberately alongside the matching compat work, never on the resolver's
# own initiative.
#   - transformers `<6`: the 4.x→5.x bump (deprecates `torch_dtype=` → `dtype=`,
#     reshapes the Trainer API used in trainer.py / datasets.py) is tracked as a
#     v1.5 dep-sweep item; `<6` admits the in-flight 5.x line while holding the
#     6.0 major until that next migration is scoped + smoke-tested. (The 5.0.0rc
#     Trainer-ACE fix is deferred on this same compat work — CHANGELOG "Security".)
#   - torch `<3`: same major-version risk class for the SFT/PEFT stack; holds the
#     tested 2.x line (CI matrix + the RTX-5080 dev rig run 2.10.x) until a 3.x
#     smoke cell exists.
dependencies = [
    "torch>=2.0.0,<3",
    "transformers>=4.36.0,<6",
    "datasets>=2.14.0",
    "trl>=0.7.0",
    "peft>=0.7.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    "tenacity>=8.0.0",
    "packaging>=21.0",  # Version parsing for security checks
    "filelock>=3.0.0",  # Cross-platform advisory file locking for RunHistoryManager (BACKEND-F-012, v1.3 / Wave 6a). Transitive via huggingface_hub/datasets/torch/transformers but pinned explicitly so a future upstream drop never breaks the concurrent-write contract on run_history.json.
    "argcomplete>=3.0.0",  # BRIDGE-F-005: shell completion (bash/zsh/fish) — small pure-Python; activates only when the operator runs `eval "$(register-python-argcomplete backprop)"`.
]

[project.optional-dependencies]
# Individual feature groups - install only what you need
unsloth = [
    "unsloth>=2024.1",  # Unsloth for 2x faster training
]
ui = [
    "reflex>=0.9.2",      # Reflex (Radix UI, FastAPI under the hood) - migrated from Gradio in v1.1.0
                          # 0.9.2+ required: 0.8.x ships Pydantic V1 which crashes on Python 3.14
    "fastapi>=0.115",     # Reflex's backend (pinned by Reflex; explicit here for clarity)
]
validation = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",  # Config validation
]
export = [
    "llama-cpp-python>=0.2.0",  # GGUF export
]
monitoring = [
    "psutil>=5.9.0",  # System monitoring
    "wandb>=0.15.0",  # Weights & Biases logging
]
logging = [
    "structlog>=24.1.0",  # Structured logging (2026 best practices)
]
security = [
    "PyJWT>=2.8.0",  # JWT authentication
    "cryptography>=42.0.0",  # Secure token generation
]
# v1.5 T2.1: EXPERIMENTAL FP8 compute path (Blackwell/Hopper sm_90+) via
# torchao float8. torchao's kernels track torch's ABI — same upper-cap
# doctrine as torch/transformers above: on torch<2.11 torchao falls back to
# the slower `_scaled_mm` path; torch>=2.11 ships the compiled torchao
# kernels. No upper cap is pinned here yet (torchao is pre-1.0 and tracks
# torch minor-for-minor); revisit alongside the torch 3.x smoke cell. Only
# folded into the `full` bundle — FP8 is experimental and NOT part of
# standard / production.
fp8 = [
    "torchao>=0.10.0",  # float8 training (convert_to_float8_training)
]

# Bundle presets for convenience
standard = [
    "backpropagate[unsloth,ui]",  # Recommended for most users
]
full = [
    "backpropagate[unsloth,ui,validation,export,monitoring,logging,security,fp8]",  # Everything (incl. experimental FP8)
]
production = [
    "backpropagate[unsloth,ui,validation,logging,security]",  # Production deployment
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.5.0",     # Parallel test execution
    "pytest-timeout>=2.3.0",   # Test timeouts
    "hypothesis>=6.100.0",     # Property-based testing
    "mutmut>=2.4.0",           # Mutation testing
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    # Security scanning tools
    "bandit>=1.7.0",           # Security linter
    "pip-audit>=2.7.0",        # Dependency vulnerability scanner
    # `safety` removed (CIDOCS-B-105): it was invoked by no workflow, script, or
    # pre-commit hook — pure dead weight. pip-audit (above) already covers
    # dependency-vuln scanning across CI + scripts/preflight.sh; `safety`'s
    # added value (license checks) is not part of any gate. Re-add deliberately
    # if a license-scan gate is ever wired.
    "packaging>=21.0",         # Version parsing for security checks
    "httpx>=0.27.0",           # ASGI test client (auth middleware tests)
]

[project.urls]
Homepage = "https://github.com/mcp-tool-shop-org/backpropagate"
Documentation = "https://github.com/mcp-tool-shop-org/backpropagate#readme"
Repository = "https://github.com/mcp-tool-shop-org/backpropagate.git"
Issues = "https://github.com/mcp-tool-shop-org/backpropagate/issues"
Changelog = "https://github.com/mcp-tool-shop-org/backpropagate/blob/main/CHANGELOG.md"

[project.scripts]
backpropagate = "backpropagate.cli:main"
backprop = "backpropagate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["backpropagate"]

[tool.hatch.build.targets.sdist]
include = [
    "/backpropagate",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/logo.png",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E402",   # module-import-not-at-top (conditional/deferred imports)
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise-without-from-inside-except (pre-existing, too many to fix at once)
    "B905",   # zip without explicit strict
    "C901",   # too complex
    "F821",   # undefined-name (lazy/conditional imports used throughout)
    "F822",   # undefined-export (re-exports via __all__)
    "F841",   # unused-variable (pre-existing, needs targeted cleanup)
    "SIM102", # collapsible-if (stylistic)
    "SIM105", # suppressible-exception (stylistic)
    "SIM108", # if-else-block-instead-of-if-exp (stylistic)
    "SIM117", # multiple-with-statements (stylistic)
    "SIM118", # in-dict-keys (stylistic)
    "SIM401", # if-else-block-instead-of-dict-get (stylistic)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]    # unused imports in __init__
"cli.py" = ["ARG001"]       # argparse handlers require namespace param
"trainer.py" = ["ARG001", "ARG002"]   # API compatibility params + HF TrainerCallback method signature (parent class args we don't use)
"tests/*" = ["ARG"]               # unused arguments in tests

[tool.ruff.lint.isort]
known-first-party = ["backpropagate"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Reflex's `rx.flex(...) / rx.box(...) / rx.button(...)` builders are typed as
# returning `Component`, but mypy infers `Any` from the dynamically-generated
# child types. Strict no-any-return + the Reflex component-tree style adds 50+
# false positives across ui_app/. Loosen for the Reflex tree specifically;
# the rest of the codebase stays strict.
#
# v1.1.2 expanded this override: also disable disallow_incomplete_defs and
# check_untyped_defs to cover the remaining ~12 errors (asdict() narrowing,
# bool() return casts, Reflex Var types). The alternative — fixing each error
# in source — drags into ui_app/ source which a different agent owns this
# wave. Re-evaluate when the Reflex 0.10 typing pass lands upstream.
[[tool.mypy.overrides]]
module = "backpropagate.ui_app.*"
warn_return_any = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
# v1.2.0 Stage C: silence attr-defined for Reflex Var methods (.length(), .to_string())
# that mypy can't see because the State field's declared type is plain int / list,
# not rx.Var[int] / rx.Var[list]. Re-evaluate when Reflex ships proper Var generics.
# v1.2.0 Wave 6: also silence "operator" — Reflex's @rx.event decorator wraps
# handlers in EventNamespace which mypy sees as non-callable when called from
# inside another event handler. Same root cause class as the Var generics gap.
disable_error_code = ["attr-defined", "operator"]

# Same Reflex Var/EventNamespace typing gap applies to backpropagate.ui_state
# (the State classes live there, not under ui_app/). Mirror the override.
[[tool.mypy.overrides]]
module = "backpropagate.ui_state"
warn_return_any = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disable_error_code = ["attr-defined", "operator"]

# rxconfig.py uses the `backend_only` kwarg which Reflex 0.9 removed from
# rx.Config — mypy flags it as a call-arg error even though Reflex still
# accepts it at runtime. v1.1.2: silence until the rxconfig migration to
# 0.9-native kwargs lands.
[[tool.mypy.overrides]]
module = "backpropagate.rxconfig"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--timeout=60",
]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require GPU or external services",
    "hypothesis: marks property-based tests",
    "serial: marks tests that mutate process-global state and must run sequentially under pytest-xdist (see tests/conftest.py pytest_collection_modifyitems — pinned to xdist_group='serial')",
    # TESTS-B-011 (v1.3 Wave 3 Stage C): the prior 'gpu' marker was declared
    # here but never applied to a single test (verified via
    # ``pytest --collect-only -m gpu`` returning 0 tests). Removed to keep
    # ``--strict-markers`` honest. Tests that genuinely require a GPU should
    # be marked ``integration`` (the broader integration marker already
    # gates GPU-required tests via the ``-m 'not integration'`` fast cycle).
]
filterwarnings = [
    # Ignore deprecation warning about TRANSFORMERS_CACHE - this is user's env config
    "ignore:Using `TRANSFORMERS_CACHE` is deprecated:FutureWarning",
]

[tool.coverage.run]
source = ["backpropagate"]
branch = true
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 50
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.bandit]
# exclude_dirs is substring-matched against every scanned path. .web/ is
# Reflex's working dir. (The v1.0 Gradio legacy modules were removed in v1.2.0
# and no longer need an exclusion.)
exclude_dirs = [
    "tests",
    "venv",
    ".venv",
    ".web",
]
skips = [
    "B101",  # assert - fine in non-production code
    "B104",  # bind 0.0.0.0 - expected for UI server, users should firewall
    "B404",  # subprocess import - required for GGUF/Ollama export
    "B603",  # subprocess call - inputs are validated in export.py
    "B607",  # partial path - ollama/llama.cpp are user-installed CLIs
    "B615",  # HuggingFace downloads - model names are user-provided, not a vulnerability
]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py", "conftest.py"]

[tool.mutmut]
paths_to_mutate = "backpropagate/"
tests_dir = "tests/"
runner = "python -m pytest -x --tb=no -q"
dict_synonyms = "Struct, NamedTuple"

[tool.poodle]
source_folders = ["backpropagate"]
[tool.poodle.runner_opts]
command_line = "pytest tests/ -x --assert=plain -o 'pythonpath={PYTHONPATH}' --ignore=tests/test_cli.py --ignore=tests/test_cli_extended.py"
